<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNewEntry"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/samaj_info"
                    android:drawableTop="@drawable/info1"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvViewEntry"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:drawableTop="@drawable/network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/karobari_samiti"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTransaction"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:drawableTop="@drawable/medicalinsurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/samajik_yojana"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvReport"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:drawableTop="@drawable/textlines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sabhasad_mahiti"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>