<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMemberReg"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/addmember"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/member_reg" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMemberInfo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/info"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/member_info" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvMyFamily"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_person_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="My Family" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSocialSchema"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/medical"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/social_yojana" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDownloadForm"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/downloadfile"
                    android:gravity="center"
                    android:text="@string/download_form" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSendMsg"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/email"
                    android:gravity="center"
                    android:text="@string/Send_msg" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvBirthDay"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/cake"
                    android:gravity="center"
                    android:text="@string/Happy_birthday" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddBusinessDirectory"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/directory"
                    android:gravity="center"
                    android:text="Add Business" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNews"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:cardElevation="3dp"

                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/newspaper"
                    android:gravity="center"
                    android:text="@string/news" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDirectory"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/directory"
                    android:gravity="center"
                    android:text="Directory" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvYourMember"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/info"
                    android:gravity="center"
                    android:text="@string/your_member" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddMatrimony"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/matrimony"
                    android:gravity="center"
                    android:text="Add matrimonial"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true" />
            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>